templates/ndb-operator_template.yaml
---
# Source: ndb-operator/templates/services.yaml
# Service to expose the webhook
apiVersion: v1
kind: Service
metadata:
  name: release-name-webhook-service
  namespace: default
spec:
  ports:
    - port: 9443
  selector:
    app: ndb-operator-webhook-server
---
# Source: ndb-operator/templates/services.yaml
# This service is created to get an FQDN for operator pod.
# The FQDN of this service will be used as the host name
# when creating 'ndb-operator-user' user. Operator
# will use this user account to create/modify/delete the root
# user account.
apiVersion: v1
kind: Service
metadata:
  name: ndb-operator-svc
  namespace: default
spec:
  selector:
    app: ndb-operator
  clusterIP: None
---
# Source: ndb-operator/templates/deployments.yaml
# Deploy the webhook server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-webhook-server
  namespace: default
  labels:
    release: 8.4.0-1.4.0
    app: ndb-operator-webhook-deployment
spec:
  selector:
    matchLabels:
      app: ndb-operator-webhook-server
  template:
    metadata:
      labels:
        app: ndb-operator-webhook-server
    spec:
      # use the account created above to run the server
      serviceAccountName: release-name-webhook-sa
      containers:
        - name: ndb-operator-webhook
          image: container-registry.oracle.com/mysql/community-ndb-operator:8.4.0-1.4.0
          imagePullPolicy: IfNotPresent
          ports:
            # expose the web server port
            - containerPort: 9443
          command:
            - ndb-operator-webhook
          args:
            - -service=release-name-webhook-service
          readinessProbe:
            httpGet:
              path: /health
              port: 9443
              scheme: HTTPS
  # set maxUnavailable to 0 so that helm will wait for the pod to become ready
  strategy:
    rollingUpdate:
      maxUnavailable: 0
---
# Source: ndb-operator/templates/deployments.yaml
# Deploy Ndb operator
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-app
  namespace: default
  labels:
    release: 8.4.0-1.4.0
    app: ndb-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ndb-operator
  template:
    metadata:
      labels:
        app: ndb-operator
    spec:
      serviceAccountName: release-name-app-sa
      hostname: ndb-operator-pod
      subdomain: ndb-operator-svc
      containers:
        - name: ndb-operator-controller
          image: container-registry.oracle.com/mysql/community-ndb-operator:8.4.0-1.4.0
          imagePullPolicy: IfNotPresent
          command:
            - ndb-operator
          args:
            - -cluster-scoped=true
          ports:
            - containerPort: 1186
  strategy:
    rollingUpdate:
      maxUnavailable: 0
---
# Source: ndb-operator/templates/cluster-roles.yaml
# Use ClusterRole if the operator is cluster-scoped
# and Role if the operator is namespace-scoped.
---
# Source: ndb-operator/templates/rolebindings.yaml
# Other RBAC bindings are based on the scope of the Operator.
# Use ClusterRoleBinding if the operator is cluster-scoped
# and RoleBinding if the operator is namespace-scoped.
---
# Source: ndb-operator/templates/mutating-webhook-configs.yaml
# Register the webhook service as a mutating webhook
# since mutating webhook(mwh) is a cluster scoped resource, append release
# namespace along with release name to the vwh name to allow installing multiple
# namespace scoped operators
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: default-release-name-mwc
  labels:
    # This label will be used by the webhook server to
    # list WebhookConfigurations to inject caBundle into
    webhook-server: default-release-name-webhook-service
webhooks:
  - clientConfig:
      # caBundle will be filled in by the webhook server
      service:
        name: release-name-webhook-service
        namespace: default
        path: /ndb/mutate
        port: 9443
    failurePolicy: Fail
    name: mutating-webhook.ndbcluster.mysql.oracle.com
    rules:
      - apiGroups:
          - mysql.oracle.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ndbclusters
    admissionReviewVersions:
      - v1
    sideEffects: None
---
# Source: ndb-operator/templates/validating-webhook-configs.yaml
# Register the webhook service as a validating webhook
# since validating webhook(vwh) is a cluster scoped resource, append release
# namespace along with release name to the vwh name to allow installing multiple
# namespace scoped operators
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: default-release-name-vwc
  labels:
    # This label will be used by the webhook server to
    # list WebhookConfigurations to inject caBundle into
    webhook-server: default-release-name-webhook-service
webhooks:
  - clientConfig:
      # caBundle will be filled in by the webhook server
      service:
        name: release-name-webhook-service
        namespace: default
        path: /ndb/validate
        port: 9443
    failurePolicy: Fail
    name: validating-webhook.ndbcluster.mysql.oracle.com
    rules:
      - apiGroups:
          - mysql.oracle.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ndbclusters
    admissionReviewVersions:
      - v1
    sideEffects: None
